Tests/Bad/var_as_array.min
function main;
beginparams
endparams
beginlocals
	n : integer;
	r : array [10] of integer;
endlocals
beginbody
 	n := 7;
 	n[1] := n[1] - 3;
 	write n[1];
 endbody
